[tool.poetry]
name = "social-bot-v2"
version = "1.0.1"
description = "A simple python social media video downloader bot."

authors = ["anbuinfosec anbuinfosec@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
aiofiles = "^23.2.1"
aiogram = "^2.17"
utils = "^1.0.1"
psutil = "^5.9.6"
aiohttp = "^3.9.1"
python-decouple = "^3.8"
speedtest-cli = "^2.1.3"
wang-test = "^1.0.0.1"
requests = "^2.31.0"
flask = "^3.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
